--- a/src/index.css
+++ b/src/index.css
@@ -4,28 +4,16 @@
 
 @import "./styles/animations.scss";
 
-/* Add this in index.css */
-.test-class {
-  background-color: green;
-}
 html,
 body {
   height: 100%;
   margin: 0; /* Remove default margin */
+  background-color: #000000;
 }
 
 #root {
   height: 100%; /* Ensures the root div takes up the full height */
   width: 100%; /* Ensures the root div takes up the full width */
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -39,38 +27,6 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
 
 @layer base {
@@ -138,10 +94,8 @@ button:focus-visible {
   }
 }
 
-/* src/index.css or your main CSS file */
-
 .loader {
-  border-top-color: #3498db;
+  border-top-color: #be123c;
   animation: spin 1s infinite linear;
 }
 
